load("//docs:defs.bzl", "ng_app")

package(default_visibility = ["//visibility:public"])

# The application
ng_app(
    name = "scenes",
    deps = [
        "//docs:node_modules/@angular/components-examples",
        "//docs:node_modules/@stackblitz/sdk",
        "//docs:node_modules/moment",
    ],
)
