load("//tools:integration.bzl", "LOCAL_NPM_PACKAGES", "integration_test")

integration_test(
    name = "test",
    srcs = glob(["**/*"]),
    commands = [
        "pnpm i",
        "pnpm run e2e",
    ],
    npm_packages = LOCAL_NPM_PACKAGES,
    setup_chromium = True,
    tags = [
        # This test relies on `pnpm` so there needs to be internet access.
        "requires-network",
    ],
)
