load("@aspect_rules_js//js:defs.bzl", "js_test")

# Test which ensures that specified NPM packages can be transformed from their partial
# declarations to definitions using the `@angular/compiler-cli` linker babel plugin.
js_test(
    name = "linker",
    data = [
        "link-packages-test.mjs",
        "//:node_modules/@angular/compiler-cli",
        "//:node_modules/@babel/core",
        "//:node_modules/chalk",
        "//:node_modules/glob",
        "//src/cdk:npm_package",
        "//src/cdk-experimental:npm_package",
        "//src/google-maps:npm_package",
        "//src/material:npm_package",
        "//src/material-experimental:npm_package",
        "//src/youtube-player:npm_package",
    ],
    entry_point = "link-packages-test.mjs",
)
