load("@npm//@bazel/esbuild:index.bzl", "esbuild_config")
load("//tools:defaults2.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

exports_files([
    "rollup.config.js",
    "terser-config.json",
    "index-tmpl.ts",
])

esbuild_config(
    name = "esbuild_config",
    config_file = "esbuild.config.mjs",
    deps = [
        "@npm//@angular/build",
        "@npm//@angular/compiler-cli",
        "@npm//@babel/core",
    ],
)

ts_project(
    name = "check-size",
    srcs = ["check-size.ts"],
    deps = [
        "//:node_modules/@bazel/runfiles",
        "//:node_modules/@types/node",
        "//:node_modules/@types/yaml",
        "//:node_modules/chalk",
        "//:node_modules/yaml",
    ],
)
