load("//tools:integration.bzl", "LOCAL_NPM_PACKAGES", "integration_test")

integration_test(
    name = "test",
    srcs = ["//src/cdk/testing/tests:sources_for_integration_tests"] + glob(["**/*"]),
    commands = [
        "pnpm install",
        "node ./setup-test-files.mjs",
        "pnpm run test --watch=false",
    ],
    npm_packages = LOCAL_NPM_PACKAGES,
    tags = ["requires-network"],
)
