load("//tools:integration.bzl", "LOCAL_NPM_PACKAGES", "integration_test")

integration_test(
    name = "test",
    srcs = glob(["**/*"]),
    commands = [
        "node .yarn/releases/yarn-4.7.0.cjs install --no-immutable",
        "node .yarn/releases/yarn-4.7.0.cjs build",
    ],
    environment = {
        # Set `CI` to silence `yarn berry` and make the output readable.
        "CI": "true",
    },
    npm_packages = LOCAL_NPM_PACKAGES,
    tags = [
        # This test relies on `yarn` so there needs to be internet access.
        "requires-network",
    ],
)
