load("//src/cdk-experimental:config.bzl", "CDK_EXPERIMENTAL_TARGETS")
load("//tools:defaults.bzl", "ng_package")
load("//tools:defaults2.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages()

ts_project(
    name = "cdk-experimental",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = ["//:node_modules/@angular/core"],
)

ng_package(
    name = "npm_package",
    package_name = "@angular/cdk-experimental",
    srcs = ["package.json"],
    package_deps = [":node_modules/@angular/cdk"],
    tags = ["release-package"],
    visibility = [
        "//:__pkg__",
        "//goldens:__pkg__",
        "//integration:__subpackages__",
        "//src/material-experimental:__subpackages__",
    ],
    deps = CDK_EXPERIMENTAL_TARGETS,
)
